--- a/src/GummiBearKingdom/appsettings.json
+++ b/src/GummiBearKingdom/appsettings.json
@@ -1,7 +1,5 @@
 ﻿{
-	"Data": {
-		"DefaultConnection": {
-			"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=GummiBearKingdom;Trusted_Connection=True;"
-		}
-	}
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GummiBearKingdom;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
